tests/snapshots/match_expression_tests__match_only_default.snap
---
source: tests/match_expression_tests.rs
expression: program
---
Program {
    statements: [
        Expression {
            expr: Assign {
                var: Variable {
                    name: Span {
                        start: 6,
                        end: 13,
                    },
                    span: Span {
                        start: 6,
                        end: 13,
                    },
                },
                expr: Match {
                    condition: Variable {
                        name: Span {
                            start: 22,
                            end: 28,
                        },
                        span: Span {
                            start: 22,
                            end: 28,
                        },
                    },
                    arms: [
                        MatchArm {
                            conditions: None,
                            body: String {
                                value: [
                                    39,
                                    97,
                                    108,
                                    119,
                                    97,
                                    121,
                                    115,
                                    39,
                                ],
                                span: Span {
                                    start: 47,
                                    end: 55,
                                },
                            },
                            span: Span {
                                start: 36,
                                end: 55,
                            },
                        },
                    ],
                    span: Span {
                        start: 16,
                        end: 59,
                    },
                },
                span: Span {
                    start: 6,
                    end: 59,
                },
            },
            span: Span {
                start: 6,
                end: 60,
            },
        },
    ],
    errors: [],
    span: Span {
        start: 6,
        end: 60,
    },
}
